--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -77,9 +77,9 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <body>
 <div class='container'>
 <div class='left'>
-<p color: red;>Kidnapped: 125</p>
-<p color: black;>Murdered: 26</p>
-<p color: #FFD700;>Alive: 99</p>
+<p style="color: red;">Kidnapped: 125</p>
+<p style="color: black;">Murdered: 26</p>
+<p style="color: #FFD700;">Alive: 99</p>
 </div>
 <div class='right'>
 <figure>
