--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -30,7 +30,7 @@ box-shadow: 0 0 1vw #FFD700;
 figcaption {
 margin-top: 0vw;
 font-family: 'Arial, sans-serif';
-font-size: '10px'; 
+font-size: 10px; 
 word-wrap: break-word;
 overflow: hidden;
 display: block;
@@ -38,13 +38,15 @@ display: block;
 
 @media screen and (max-width: 768px) {
 figcaption 
-{font-size: '5px'}
+{font-size: 5px;}
 }
 
 .container {
 display: flex;
 flex-wrap: wrap;
 justify-content: space-between;
+border: 20px solid red;
+box-sizing: border-box;
 }
 
 .left{
@@ -77,29 +79,34 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <body>
 <div class='container'>
 <div class='left'>
-<p color:red;>Kidnapped: 125</p>
-<p color:black;>Murdered: 28</p>
-<p color:#FFD700;>Alive: 97</p>
+<p color:red;>Kidnapped: 127</p>
+<p color:black;>Murdered: 31</p>
+<p color:#FFD700;>Alive: 96</p>
 </div>
 <div class='right'>
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EladKazir.jpg" alt="אלעד קציר">
+<figcaption>EladKazir<br>אלעד קציר</figcaption>
+</figure>
+
 <figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
 <figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefSharabi.jpg " alt="אלי שרעבי">
-<figcaption>YosefSharabi<br>אלי שרעבי</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GaliBerman.jpg" alt="גלי ברמן">
+<figcaption>GaliBerman<br>גלי ברמן</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה">
-<figcaption>YosefHamisZiadna<br>יוסף חמיס אלזיאדנה</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ZivBerman.jpg" alt="זיו ברמן">
+<figcaption>ZivBerman<br>זיו ברמן</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה">
-<figcaption>HamzaZiadna<br>חמזה אלזיאדנה</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/NadavPoplewell.jpg" alt="נדב פופלוול">
+<figcaption>NadavPoplewell<br>נדב פופלוול</figcaption>
 </figure>
 
 <figure>
@@ -110,6 +117,121 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
 <figcaption>EitanHoran<br>איתן הורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvitanOr.jpg" alt="אבינתן אור">
+<figcaption>AvitanOr<br>אבינתן אור</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/Noaargmni.jpg" alt="נועה ארגמני">
+<figcaption>Noaargmni<br>נועה ארגמני</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AmiramCooper.jpg" alt="עמירם קופר">
+<figcaption>AmiramCooper<br>עמירם קופר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/FernandoMarman.jpg" alt="פרננדו מרמן">
+<figcaption>FernandoMarman<br>פרננדו מרמן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il///2023/11/05/LuisHerrNarberto.jpg" alt="נורברטו לואיס הר">
+<figcaption>LuisHerrNarberto<br>נורברטו לואיס הר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvrahamMondar.jpg" alt="אברהם מונדר">
+<figcaption>AvrahamMondar<br>אברהם מונדר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YoramMetzger.jpg" alt="יורם מצגר">
+<figcaption>YoramMetzger<br>יורם מצגר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArbelYehud.jpg" alt="ארבל יהוד">
+<figcaption>ArbelYehud<br>ארבל יהוד</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DolevYehud.jpg" alt="דולב יהוד">
+<figcaption>DolevYehud<br>דולב יהוד</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielKonio.jpg" alt="אריאל קוניו">
+<figcaption>ArielKonio<br>אריאל קוניו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DavidKonio.jpg" alt="דוד קוניו">
+<figcaption>DavidKonio<br>דוד קוניו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
+<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
+<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/CarmelGat.jpg" alt="כרמל גת">
+<figcaption>CarmelGat<br>כרמל גת</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/30/hishamabusid.jpg" alt="הישאם א-סייד">
+<figcaption>hishamabusid<br>הישאם א-סייד</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il///2023/11/30/averamangisto.jpg" alt="אברה מנגיסטו">
+<figcaption>averamangisto<br>אברה מנגיסטו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
+<figcaption>TalShoham<br>טל שוהם</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס">
+<figcaption>GadiMozes<br>גדי מוזס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/05/YairJacob.jpg" alt="יאיר יעקב">
+<figcaption>YairJacob<br>יאיר יעקב</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי">
+<figcaption>OhadBenAmi<br>אוהד בן עמי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק (יצחק) אלגרט">
+<figcaption>ItzikElgart<br>איציק (יצחק) אלגרט</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AlexDanzig.jpg" alt="אלכס דנציג">
+<figcaption>AlexDanzig<br>אלכס דנציג</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2024/01/25/400X.png" alt="עוז דניאל">
+<figcaption>400X<br>עוז דניאל</figcaption>
 </figure>
 
 <figure>
@@ -173,8 +295,8 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/KarinaAriev.jpg" alt="קארינה ארייב">
-<figcaption>KarinaAriev<br>קארינה ארייב</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KarinaAriev.jpg" alt="קרינה ארייב">
+<figcaption>KarinaAriev<br>קרינה ארייב</figcaption>
 </figure>
 
 <figure>
@@ -230,11 +352,6 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/OrionHernandezRado.jpg" alt="אוריון הרננדס ראדו">
 <figcaption>OrionHernandezRado<br>אוריון הרננדס ראדו</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/RanGoyali.jpg" alt="רן גוילי">
-<figcaption>RanGoyali<br>רן גוילי</figcaption>
 </figure>
 
 <figure>
@@ -305,11 +422,6 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/AgamBerger.jpg" alt="אגם ברגר">
 <figcaption>AgamBerger<br>אגם ברגר</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il/2023/12/07/levinson.png" alt="שי לוינסון">
-<figcaption>levinson<br>שי לוינסון</figcaption>
 </figure>
 
 <figure>
@@ -393,68 +505,33 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/05/YairJacob.jpg" alt="יאיר יעקב">
-<figcaption>YairJacob<br>יאיר יעקב</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל">
+<figcaption>KetSiegel<br>קית' סיגל</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/30/hishamabusid.jpg" alt="הישאם א-סייד">
-<figcaption>hishamabusid<br>הישאם א-סייד</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה">
+<figcaption>YosefHamisZiadna<br>יוסף חמיס אלזיאדנה</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il///2023/11/30/averamangisto.jpg" alt="אברה מנגיסטו">
-<figcaption>averamangisto<br>אברה מנגיסטו</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה">
+<figcaption>HamzaZiadna<br>חמזה אלזיאדנה</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/GaliBerman.jpg" alt="גלי ברמן">
-<figcaption>GaliBerman<br>גלי ברמן</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OferCalderon.jpg" alt="עופר קלדרון">
+<figcaption>OferCalderon<br>עופר קלדרון</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ZivBerman.jpg" alt="זיו ברמן">
-<figcaption>ZivBerman<br>זיו ברמן</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
+<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/DrorOr.jpg" alt="דרור אור">
-<figcaption>DrorOr<br>דרור אור</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/FernandoMarman.jpg" alt="פרננדו מרמן">
-<figcaption>FernandoMarman<br>פרננדו מרמן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il///2023/11/05/LuisHerrNarberto.jpg" alt="נורברטו לואיס הר">
-<figcaption>LuisHerrNarberto<br>נורברטו לואיס הר</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ArbelYehud.jpg" alt="ארבל יהוד">
-<figcaption>ArbelYehud<br>ארבל יהוד</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/DolevYehud.jpg" alt="דולב יהוד">
-<figcaption>DolevYehud<br>דולב יהוד</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielKonio.jpg" alt="אריאל קוניו">
-<figcaption>ArielKonio<br>אריאל קוניו</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/DavidKonio.jpg" alt="דוד קוניו">
-<figcaption>DavidKonio<br>דוד קוניו</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YoramMetzger.jpg" alt="יורם מצגר">
-<figcaption>YoramMetzger<br>יורם מצגר</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefSharabi.jpg " alt="אלי שרעבי">
+<figcaption>YosefSharabi<br>אלי שרעבי</figcaption>
 </figure>
 
 <figure>
@@ -478,98 +555,23 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OferCalderon.jpg" alt="עופר קלדרון">
-<figcaption>OferCalderon<br>עופר קלדרון</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
-<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
-</figure>
-
-<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/IgavBuhshtev.jpg" alt="יגב בוכשטב">
 <figcaption>IgavBuhshtev<br>יגב בוכשטב</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
-<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DrorOr.jpg" alt="דרור אור">
+<figcaption>DrorOr<br>דרור אור</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל">
-<figcaption>KetSiegel<br>קית' סיגל</figcaption>
+<img class="dead" src="https://img.mako.co.il//2023/10/21/MeniGudard.jpg" alt="מני גודארד ז"ל">
+<figcaption>MeniGudard<br>מני גודארד ז"ל</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/CarmelGat.jpg" alt="כרמל גת">
-<figcaption>CarmelGat<br>כרמל גת</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/EladKazir.jpg" alt="אלעד קציר">
-<figcaption>EladKazir<br>אלעד קציר</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/NadavPoplewell.jpg" alt="נדב פופלוול">
-<figcaption>NadavPoplewell<br>נדב פופלוול</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AvitanOr.jpg" alt="אבינתן אור">
-<figcaption>AvitanOr<br>אבינתן אור</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/Noaargmni.jpg" alt="נועה ארגמני">
-<figcaption>Noaargmni<br>נועה ארגמני</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
-<figcaption>TalShoham<br>טל שוהם</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AvrahamMondar.jpg" alt="אברהם מונדר">
-<figcaption>AvrahamMondar<br>אברהם מונדר</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק (יצחק) אלגרט">
-<figcaption>ItzikElgart<br>איציק (יצחק) אלגרט</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AlexDanzig.jpg" alt="אלכס דנציג">
-<figcaption>AlexDanzig<br>אלכס דנציג</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי">
-<figcaption>OhadBenAmi<br>אוהד בן עמי</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס">
-<figcaption>GadiMozes<br>גדי מוזס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AmiramCooper.jpg" alt="עמירם קופר">
-<figcaption>AmiramCooper<br>עמירם קופר</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
-<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
-</figure>
-
-<figure>
-<img class="dead" src="https://img.mako.co.il/2023/12/02/AsafHamami.jpg" alt="אל"מ אסף חממי ז"ל">
-<figcaption>AsafHamami<br>אל"מ אסף חממי ז"ל</figcaption>
+<img class="dead" src="https://img.mako.co.il/2023/12/02/AsafHamami.jpg" alt="אל"ם אסף חממי ז"ל">
+<figcaption>AsafHamami<br>אל"ם אסף חממי ז"ל</figcaption>
 </figure>
 
 <figure>
@@ -663,6 +665,11 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
+<img class="dead" src="https://img.mako.co.il//2023/11/05/RanGoyali.jpg" alt="רס"ל רן גואילי ז"ל">
+<figcaption>RanGoyali<br>רס"ל רן גואילי ז"ל</figcaption>
+</figure>
+
+<figure>
 <img class="dead" src="https://img.mako.co.il/2023/11/28/tomerahimas.jfif" alt="סמ"ר תומר אחימס ז"ל">
 <figcaption>tomerahimas<br>סמ"ר תומר אחימס ז"ל</figcaption>
 </figure>
@@ -675,6 +682,11 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="dead" src="https://img.mako.co.il//2023/11/05/JoshuaLuitoMollel.jpg" alt="ג'ושוע לויטו מולל ז"ל">
 <figcaption>JoshuaLuitoMollel<br>ג'ושוע לויטו מולל ז"ל</figcaption>
+</figure>
+
+<figure>
+<img class="dead" src="https://img.mako.co.il/2023/12/07/levinson.png" alt="סמ"ר שי לוינסון ז"ל">
+<figcaption>levinson<br>סמ"ר שי לוינסון ז"ל</figcaption>
 </figure>
 
 <figure>
