--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -80,18 +80,18 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <div class='container'>
 <div class='left'>
 <p color:red;>Kidnapped: 134</p>
-<p color:black;>Murdered: 35</p>
-<p color:#FFD700;>Alive: 99</p>
+<p color:black;>Murdered: 36</p>
+<p color:#FFD700;>Alive: 98</p>
 </div>
 <div class='right'>
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/CarmelGat.jpg" alt="כרמל גת">
-<figcaption>CarmelGat<br>כרמל גת</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל">
+<figcaption>KetSiegel<br>קית' סיגל</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefSharabi.jpg " alt="אלי שרעבי">
-<figcaption>YosefSharabi<br>אלי שרעבי</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YoramMetzger.jpg" alt="יורם מצגר">
+<figcaption>YoramMetzger<br>יורם מצגר</figcaption>
 </figure>
 
 <figure>
@@ -105,8 +105,18 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
-<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס">
+<figcaption>GadiMozes<br>גדי מוזס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה">
+<figcaption>YosefHamisZiadna<br>יוסף חמיס אלזיאדנה</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה">
+<figcaption>HamzaZiadna<br>חמזה אלזיאדנה</figcaption>
 </figure>
 
 <figure>
@@ -115,18 +125,68 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
-<figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק (יצחק) אלגרט">
+<figcaption>ItzikElgart<br>איציק (יצחק) אלגרט</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/EladKazir.jpg" alt="אלעד קציר">
-<figcaption>EladKazir<br>אלעד קציר</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AlexDanzig.jpg" alt="אלכס דנציג">
+<figcaption>AlexDanzig<br>אלכס דנציג</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/NadavPoplewell.jpg" alt="נדב פופלוול">
-<figcaption>NadavPoplewell<br>נדב פופלוול</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DrorOr.jpg" alt="דרור אור">
+<figcaption>DrorOr<br>דרור אור</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי">
+<figcaption>OhadBenAmi<br>אוהד בן עמי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
+<figcaption>TalShoham<br>טל שוהם</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/30/hishamabusid.jpg" alt="הישאם א-סייד">
+<figcaption>hishamabusid<br>הישאם א-סייד</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il///2023/11/30/averamangisto.jpg" alt="אברה מנגיסטו">
+<figcaption>averamangisto<br>אברה מנגיסטו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DavidKonio.jpg" alt="דוד קוניו">
+<figcaption>DavidKonio<br>דוד קוניו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielKonio.jpg" alt="אריאל קוניו">
+<figcaption>ArielKonio<br>אריאל קוניו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArbelYehud.jpg" alt="ארבל יהוד">
+<figcaption>ArbelYehud<br>ארבל יהוד</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DolevYehud.jpg" alt="דולב יהוד">
+<figcaption>DolevYehud<br>דולב יהוד</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
+<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OferCalderon.jpg" alt="עופר קלדרון">
+<figcaption>OferCalderon<br>עופר קלדרון</figcaption>
 </figure>
 
 <figure>
@@ -330,11 +390,6 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OrielBaruh.jpg" alt="אוריאל ברוך">
-<figcaption>OrielBaruh<br>אוריאל ברוך</figcaption>
-</figure>
-
-<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/RomBreslavsky.jpg" alt="רום ברסלבסקי">
 <figcaption>RomBreslavsky<br>רום ברסלבסקי</figcaption>
 </figure>
@@ -435,33 +490,13 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AvrahamMondar.jpg" alt="אברהם מונדר">
-<figcaption>AvrahamMondar<br>אברהם מונדר</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
+<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי">
-<figcaption>OhadBenAmi<br>אוהד בן עמי</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YoramMetzger.jpg" alt="יורם מצגר">
-<figcaption>YoramMetzger<br>יורם מצגר</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס">
-<figcaption>GadiMozes<br>גדי מוזס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/30/hishamabusid.jpg" alt="הישאם א-סייד">
-<figcaption>hishamabusid<br>הישאם א-סייד</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il///2023/11/30/averamangisto.jpg" alt="אברה מנגיסטו">
-<figcaption>averamangisto<br>אברה מנגיסטו</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/NadavPoplewell.jpg" alt="נדב פופלוול">
+<figcaption>NadavPoplewell<br>נדב פופלוול</figcaption>
 </figure>
 
 <figure>
@@ -472,6 +507,11 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
 <figcaption>EitanHoran<br>איתן הורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
+<figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
 </figure>
 
 <figure>
@@ -500,71 +540,6 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
-<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OferCalderon.jpg" alt="עופר קלדרון">
-<figcaption>OferCalderon<br>עופר קלדרון</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/DrorOr.jpg" alt="דרור אור">
-<figcaption>DrorOr<br>דרור אור</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
-<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/DavidKonio.jpg" alt="דוד קוניו">
-<figcaption>DavidKonio<br>דוד קוניו</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielKonio.jpg" alt="אריאל קוניו">
-<figcaption>ArielKonio<br>אריאל קוניו</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ArbelYehud.jpg" alt="ארבל יהוד">
-<figcaption>ArbelYehud<br>ארבל יהוד</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/DolevYehud.jpg" alt="דולב יהוד">
-<figcaption>DolevYehud<br>דולב יהוד</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה">
-<figcaption>YosefHamisZiadna<br>יוסף חמיס אלזיאדנה</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה">
-<figcaption>HamzaZiadna<br>חמזה אלזיאדנה</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל">
-<figcaption>KetSiegel<br>קית' סיגל</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק (יצחק) אלגרט">
-<figcaption>ItzikElgart<br>איציק (יצחק) אלגרט</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AlexDanzig.jpg" alt="אלכס דנציג">
-<figcaption>AlexDanzig<br>אלכס דנציג</figcaption>
-</figure>
-
-<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/GaliBerman.jpg" alt="גלי ברמן">
 <figcaption>GaliBerman<br>גלי ברמן</figcaption>
 </figure>
@@ -575,8 +550,28 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
-<figcaption>TalShoham<br>טל שוהם</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EladKazir.jpg" alt="אלעד קציר">
+<figcaption>EladKazir<br>אלעד קציר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
+<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefSharabi.jpg " alt="אלי שרעבי">
+<figcaption>YosefSharabi<br>אלי שרעבי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvrahamMondar.jpg" alt="אברהם מונדר">
+<figcaption>AvrahamMondar<br>אברהם מונדר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/CarmelGat.jpg" alt="כרמל גת">
+<figcaption>CarmelGat<br>כרמל גת</figcaption>
 </figure>
 
 <figure>
@@ -662,6 +657,11 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="dead" src="https://img.mako.co.il//2024/01/25/400X.png" alt="סמל עוז דניאל ז"ל">
 <figcaption>400X<br>סמל עוז דניאל ז"ל</figcaption>
+</figure>
+
+<figure>
+<img class="dead" src="https://img.mako.co.il//2023/11/05/OrielBaruh.jpg" alt="אוריאל ברוך ז"ל">
+<figcaption>OrielBaruh<br>אוריאל ברוך ז"ל</figcaption>
 </figure>
 
 <figure>
