updating kidnapped.html page list

--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -85,8 +85,8 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </div>
 <div class='right'>
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OferCalderon.jpg" alt="עופר קלדרון">
-<figcaption>OferCalderon<br>עופר קלדרון</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
+<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
 </figure>
 
 <figure>
@@ -110,33 +110,18 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי">
-<figcaption>OhadBenAmi<br>אוהד בן עמי</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס">
-<figcaption>GadiMozes<br>גדי מוזס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AvrahamMondar.jpg" alt="אברהם מונדר">
-<figcaption>AvrahamMondar<br>אברהם מונדר</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/CarmelGat.jpg" alt="כרמל גת">
-<figcaption>CarmelGat<br>כרמל גת</figcaption>
-</figure>
-
-<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/AvitanOr.jpg" alt="אבינתן אור">
 <figcaption>AvitanOr<br>אבינתן אור</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
-<figcaption>TalShoham<br>טל שוהם</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי">
+<figcaption>OhadBenAmi<br>אוהד בן עמי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/IgavBuhshtev.jpg" alt="יגב בוכשטב">
+<figcaption>IgavBuhshtev<br>יגב בוכשטב</figcaption>
 </figure>
 
 <figure>
@@ -155,8 +140,78 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GaliBerman.jpg" alt="גלי ברמן">
+<figcaption>GaliBerman<br>גלי ברמן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ZivBerman.jpg" alt="זיו ברמן">
+<figcaption>ZivBerman<br>זיו ברמן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
+<figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
+<figcaption>TalShoham<br>טל שוהם</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/CarmelGat.jpg" alt="כרמל גת">
+<figcaption>CarmelGat<br>כרמל גת</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
+<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
+</figure>
+
+<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל">
 <figcaption>KetSiegel<br>קית' סיגל</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
+<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס">
+<figcaption>GadiMozes<br>גדי מוזס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה">
+<figcaption>YosefHamisZiadna<br>יוסף חמיס אלזיאדנה</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה">
+<figcaption>HamzaZiadna<br>חמזה אלזיאדנה</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/30/hishamabusid.jpg" alt="הישאם א-סייד">
+<figcaption>hishamabusid<br>הישאם א-סייד</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il///2023/11/30/averamangisto.jpg" alt="אברה מנגיסטו">
+<figcaption>averamangisto<br>אברה מנגיסטו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן">
+<figcaption>YairHoren<br>יאיר הורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
+<figcaption>EitanHoran<br>איתן הורן</figcaption>
 </figure>
 
 <figure>
@@ -385,58 +440,18 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
-<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/IgavBuhshtev.jpg" alt="יגב בוכשטב">
-<figcaption>IgavBuhshtev<br>יגב בוכשטב</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/30/hishamabusid.jpg" alt="הישאם א-סייד">
-<figcaption>hishamabusid<br>הישאם א-סייד</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il///2023/11/30/averamangisto.jpg" alt="אברה מנגיסטו">
-<figcaption>averamangisto<br>אברה מנגיסטו</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
-<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/GaliBerman.jpg" alt="גלי ברמן">
-<figcaption>GaliBerman<br>גלי ברמן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ZivBerman.jpg" alt="זיו ברמן">
-<figcaption>ZivBerman<br>זיו ברמן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה">
-<figcaption>YosefHamisZiadna<br>יוסף חמיס אלזיאדנה</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה">
-<figcaption>HamzaZiadna<br>חמזה אלזיאדנה</figcaption>
-</figure>
-
-<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/YosefSharabi.jpg " alt="אלי שרעבי">
 <figcaption>YosefSharabi<br>אלי שרעבי</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק (יצחק) אלגרט">
-<figcaption>ItzikElgart<br>איציק (יצחק) אלגרט</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvrahamMondar.jpg" alt="אברהם מונדר">
+<figcaption>AvrahamMondar<br>אברהם מונדר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק אלגרט">
+<figcaption>ItzikElgart<br>איציק אלגרט</figcaption>
 </figure>
 
 <figure>
@@ -445,23 +460,8 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
-<figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן">
-<figcaption>YairHoren<br>יאיר הורן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
-<figcaption>EitanHoran<br>איתן הורן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
-<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OferCalderon.jpg" alt="עופר קלדרון">
+<figcaption>OferCalderon<br>עופר קלדרון</figcaption>
 </figure>
 
 <figure>
