updating kidnapped.html page list

--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -79,39 +79,14 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <body>
 <div class='container'>
 <div class='left'>
-<p color:red;>Kidnapped: 107</p>
-<p color:black;>Murdered: 35</p>
-<p color:#FFD700;>Alive: 72</p>
+<p color:red;>Kidnapped: 102</p>
+<p color:black;>Murdered: 36</p>
+<p color:#FFD700;>Alive: 66</p>
 </div>
 <div class='right'>
 <figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/30/hishamabusid.jpg" alt="הישאם א-סייד">
-<figcaption>hishamabusid<br>הישאם א-סייד</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il///2023/11/30/averamangisto.jpg" alt="אברה מנגיסטו">
-<figcaption>averamangisto<br>אברה מנגיסטו</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
-<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
-<figcaption>TalShoham<br>טל שוהם</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/GaliBerman.jpg" alt="גלי ברמן">
-<figcaption>GaliBerman<br>גלי ברמן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ZivBerman.jpg" alt="זיו ברמן">
-<figcaption>ZivBerman<br>זיו ברמן</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל">
+<figcaption>KetSiegel<br>קית' סיגל</figcaption>
 </figure>
 
 <figure>
@@ -120,8 +95,33 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי">
+<figcaption>OhadBenAmi<br>אוהד בן עמי</figcaption>
+</figure>
+
+<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
 <figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן">
+<figcaption>YairHoren<br>יאיר הורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
+<figcaption>EitanHoran<br>איתן הורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
+<figcaption>TalShoham<br>טל שוהם</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס">
+<figcaption>GadiMozes<br>גדי מוזס</figcaption>
 </figure>
 
 <figure>
@@ -140,8 +140,18 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefSharabi.jpg " alt="אלי שרעבי">
-<figcaption>YosefSharabi<br>אלי שרעבי</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
+<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GaliBerman.jpg" alt="גלי ברמן">
+<figcaption>GaliBerman<br>גלי ברמן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ZivBerman.jpg" alt="זיו ברמן">
+<figcaption>ZivBerman<br>זיו ברמן</figcaption>
 </figure>
 
 <figure>
@@ -150,8 +160,18 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
-<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvitanOr.jpg" alt="אבינתן אור">
+<figcaption>AvitanOr<br>אבינתן אור</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה">
+<figcaption>YosefHamisZiadna<br>יוסף חמיס אלזיאדנה</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה">
+<figcaption>HamzaZiadna<br>חמזה אלזיאדנה</figcaption>
 </figure>
 
 <figure>
@@ -160,53 +180,23 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל">
-<figcaption>KetSiegel<br>קית' סיגל</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/11/30/hishamabusid.jpg" alt="הישאם א-סייד">
+<figcaption>hishamabusid<br>הישאם א-סייד</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/26/shiri.jpeg" alt="שירי ביבס">
-<figcaption>shiri<br>שירי ביבס</figcaption>
+<img class="alive" src="https://img.mako.co.il///2023/11/30/averamangisto.jpg" alt="אברה מנגיסטו">
+<figcaption>averamangisto<br>אברה מנגיסטו</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielBibs.jpg" alt="אריאל ביבס">
-<figcaption>ArielBibs<br>אריאל ביבס</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefSharabi.jpg " alt="אלי שרעבי">
+<figcaption>YosefSharabi<br>אלי שרעבי</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/KafirBiebs.jpg" alt="כפיר ביבס">
-<figcaption>KafirBiebs<br>כפיר ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/29/yardenbibas.jpg" alt="ירדן ביבס">
-<figcaption>yardenbibas<br>ירדן ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן">
-<figcaption>YairHoren<br>יאיר הורן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
-<figcaption>EitanHoran<br>איתן הורן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס">
-<figcaption>GadiMozes<br>גדי מוזס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/CarmelGat.jpg" alt="כרמל גת">
-<figcaption>CarmelGat<br>כרמל גת</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/EdenJerusalem.jpg" alt="עדן ירושלמי">
-<figcaption>EdenJerusalem<br>עדן ירושלמי</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
+<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
 </figure>
 
 <figure>
@@ -260,11 +250,6 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AlexLibnov.jpg" alt="אלכס לובנוב">
-<figcaption>AlexLibnov<br>אלכס לובנוב</figcaption>
-</figure>
-
-<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/OmriMiren.jpg" alt="עמרי מירן">
 <figcaption>OmriMiren<br>עמרי מירן</figcaption>
 </figure>
@@ -307,16 +292,6 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/ShlomoManzur.jpg" alt="שלמה מנצור">
 <figcaption>ShlomoManzur<br>שלמה מנצור</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/HirshGoldberg.jpg" alt="הרש גולדברג פולין">
-<figcaption>HirshGoldberg<br>הרש גולדברג פולין</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AlmogSarusi.jpg" alt="אלמוג סרוסי">
-<figcaption>AlmogSarusi<br>אלמוג סרוסי</figcaption>
 </figure>
 
 <figure>
@@ -385,11 +360,6 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OriDanino.jpg" alt="אורי דנינו">
-<figcaption>OriDanino<br>אורי דנינו</figcaption>
-</figure>
-
-<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/YosefOhana.jpg" alt="יוסף אוחנה">
 <figcaption>YosefOhana<br>יוסף אוחנה</figcaption>
 </figure>
@@ -425,23 +395,23 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה">
-<figcaption>YosefHamisZiadna<br>יוסף חמיס אלזיאדנה</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/11/26/shiri.jpeg" alt="שירי ביבס">
+<figcaption>shiri<br>שירי ביבס</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה">
-<figcaption>HamzaZiadna<br>חמזה אלזיאדנה</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielBibs.jpg" alt="אריאל ביבס">
+<figcaption>ArielBibs<br>אריאל ביבס</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי">
-<figcaption>OhadBenAmi<br>אוהד בן עמי</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KafirBiebs.jpg" alt="כפיר ביבס">
+<figcaption>KafirBiebs<br>כפיר ביבס</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AvitanOr.jpg" alt="אבינתן אור">
-<figcaption>AvitanOr<br>אבינתן אור</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/11/29/yardenbibas.jpg" alt="ירדן ביבס">
+<figcaption>yardenbibas<br>ירדן ביבס</figcaption>
 </figure>
 
 <figure>
@@ -572,6 +542,11 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="dead" src="https://img.mako.co.il//2023/11/05/JonathanSmareno.jpg" alt="יונתן סמרנו ז"ל">
 <figcaption>JonathanSmareno<br>יונתן סמרנו ז"ל</figcaption>
+</figure>
+
+<figure>
+<img class="dead" src="https://img.mako.co.il/2023/11/28/shaked-dahan.jpeg" alt="סמל שקד דהן ז"ל">
+<figcaption>shaked-dahan<br>סמל שקד דהן ז"ל</figcaption>
 </figure>
 
 <figure>
