updating kidnapped.html page list

--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -85,13 +85,28 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </div>
 <div class='right'>
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
-<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
+<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
-<figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן">
+<figcaption>YairHoren<br>יאיר הורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
+<figcaption>EitanHoran<br>איתן הורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvitanOr.jpg" alt="אבינתן אור">
+<figcaption>AvitanOr<br>אבינתן אור</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק אלגרט">
+<figcaption>ItzikElgart<br>איציק אלגרט</figcaption>
 </figure>
 
 <figure>
@@ -100,8 +115,18 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
-<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
+<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל">
+<figcaption>KetSiegel<br>קית' סיגל</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
+<figcaption>TalShoham<br>טל שוהם</figcaption>
 </figure>
 
 <figure>
@@ -112,61 +137,6 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/ZivBerman.jpg" alt="זיו ברמן">
 <figcaption>ZivBerman<br>זיו ברמן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/26/shiri.jpeg" alt="שירי ביבס">
-<figcaption>shiri<br>שירי ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielBibs.jpg" alt="אריאל ביבס">
-<figcaption>ArielBibs<br>אריאל ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/KafirBiebs.jpg" alt="כפיר ביבס">
-<figcaption>KafirBiebs<br>כפיר ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/29/yardenbibas.jpg" alt="ירדן ביבס">
-<figcaption>yardenbibas<br>ירדן ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
-<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AvitanOr.jpg" alt="אבינתן אור">
-<figcaption>AvitanOr<br>אבינתן אור</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל">
-<figcaption>KetSiegel<br>קית' סיגל</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OferCalderon.jpg" alt="עופר קלדרון">
-<figcaption>OferCalderon<br>עופר קלדרון</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק אלגרט">
-<figcaption>ItzikElgart<br>איציק אלגרט</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/30/hishamabusid.jpg" alt="הישאם שעבאן א-סייד">
-<figcaption>hishamabusid<br>הישאם שעבאן א-סייד</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il///2023/11/30/averamangisto.jpg" alt="אברה מנגיסטו">
-<figcaption>averamangisto<br>אברה מנגיסטו</figcaption>
 </figure>
 
 <figure>
@@ -290,23 +260,23 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il/2024/03/05/stiansvankam400.png" alt="סטיאן סוונאקאם">
-<figcaption>stiansvankam400<br>סטיאן סוונאקאם</figcaption>
+<img class="alive" src="https://img.mako.co.il/2024/03/05/stiansvankam400.png" alt="סאטיאן סוואנאקם">
+<figcaption>stiansvankam400<br>סאטיאן סוואנאקם</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il/2024/03/05/wacharasarion400.png" alt="וואטצ'רה סריון">
-<figcaption>wacharasarion400<br>וואטצ'רה סריון</figcaption>
+<img class="alive" src="https://img.mako.co.il/2024/03/05/wacharasarion400.png" alt="וואצ'ארה סריהאון">
+<figcaption>wacharasarion400<br>וואצ'ארה סריהאון</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il/2024/03/05/pintanatpong400.png" alt="פינטה נטפונג">
-<figcaption>pintanatpong400<br>פינטה נטפונג</figcaption>
+<img class="alive" src="https://img.mako.co.il/2024/03/05/pintanatpong400.png" alt="פינטה נאטאפונג">
+<figcaption>pintanatpong400<br>פינטה נאטאפונג</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="באנאוואט סהטאן">
-<figcaption>Man_Silhouette<br>באנאוואט סהטאן</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/11/23/Man_Silhouette.jpg" alt="באנאוואט סהטאו">
+<figcaption>Man_Silhouette<br>באנאוואט סהטאו</figcaption>
 </figure>
 
 <figure>
@@ -320,13 +290,38 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
+<figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
+</figure>
+
+<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס">
 <figcaption>GadiMozes<br>גדי מוזס</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
-<figcaption>TalShoham<br>טל שוהם</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/11/26/shiri.jpeg" alt="שירי ביבס">
+<figcaption>shiri<br>שירי ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielBibs.jpg" alt="אריאל ביבס">
+<figcaption>ArielBibs<br>אריאל ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KafirBiebs.jpg" alt="כפיר ביבס">
+<figcaption>KafirBiebs<br>כפיר ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/29/yardenbibas.jpg" alt="ירדן ביבס">
+<figcaption>yardenbibas<br>ירדן ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
+<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
 </figure>
 
 <figure>
@@ -335,13 +330,18 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן">
-<figcaption>YairHoren<br>יאיר הורן</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OferCalderon.jpg" alt="עופר קלדרון">
+<figcaption>OferCalderon<br>עופר קלדרון</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
-<figcaption>EitanHoran<br>איתן הורן</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/11/30/hishamabusid.jpg" alt="הישאם שעבאן א-סייד">
+<figcaption>hishamabusid<br>הישאם שעבאן א-סייד</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il///2023/11/30/averamangisto.jpg" alt="אברה מנגיסטו">
+<figcaption>averamangisto<br>אברה מנגיסטו</figcaption>
 </figure>
 
 <figure>
